# ifinder

./: .env  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 220f8bc6e85a_enable_pgvector_images_table.py  4f5474abc4a9_add_feedback_table.py
docker/: docker-compose.yaml  py.Dockerfile  py.Dockerfile.dockerignore
scripts/: run_services.sh
src/app/: main.py
src/app/core/: config.py  database.py
src/app/db/: base.py
src/app/db/models/: feedback.py  image.py
src/app/ml/: clip.py
src/app/routers/: feedback.py  image.py
src/app/schemas/: feedback.py  image.py
tests/app/ml/: test_clip.py
